<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomEntry"
        android:layout_margin="@dimen/recyclerBorder"
        />
    <RelativeLayout
        android:id="@+id/bottomEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/entryFieldBackground"
        >
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/entryButton"
            android:textColor="@color/entryFieldText"
            android:textColorHint="@color/entryFieldHintText"
            android:textSize="18sp"
            android:hint="@string/enter_your_message_here"
            />
        <ImageView
            android:id="@+id/entryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/send_message"
            android:src="@drawable/ic_send_white_24dp"
            />
    </RelativeLayout>
</RelativeLayout>